# brisas-cli

./: .dev-env-config  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  ag-run.ps1  build.rs  dev-env.ps1  tools.json
.github/workflows/: release.yml
src/: admin.rs  cli.rs  config.rs  download.rs  errors.rs  installer.rs  logger.rs  main.rs  manifest.rs  run.rs  setup.rs  ui.rs
tests/: cli_basics.rs
