[build-dependencies]
winres = "0.1"

[package]
name = "be"
version = "1.0.26"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winreg = "0.55"
walkdir = "2.5"
inquire = "0.9"
dirs = "5.0"
fs_extra = "1.3"
chrono = "0.4"
reqwest = { version = "0.12.26", features = ["blocking", "json", "rustls-tls"] }
zip = "6.0.0"
indicatif = "0.18.3"
thiserror = "2.0.17"
sha2 = "0.10.9"
hex = "0.4.3"
log = "0.4.29"
simplelog = "0.12.2"

[profile.release]
strip = true
opt-level = "z"  # Optimize for size
lto = true       # Link Time Optimization
codegen-units = 1
panic = "abort"  # No stack unwinding

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

